# Object-Nodes

./: .gitmodules  CMakeLists.txt  README.md  internals.md  mod.json
.github/workflows/: multi-platform.yml
resources/: arrow-no-shadow.psd  icon.psd
src/: EditorTabNode.cpp  EditorTabNode.hpp  GUIManager.cpp  GUIManager.hpp  GUINode.cpp  GUINode.hpp  NodeEditorPopup.cpp  NodeEditorPopup.hpp  NodeManager.cpp  NodeManager.hpp  main.cpp  structs.cpp  structs.hpp  utils.cpp  utils.hpp
src/hooks/: CCEGLView.cpp  CCEGLView.hpp  CCKeyboardDispatcher.cpp  CCKeyboardDispatcher.hpp  CCScheduler.cpp  EditorPauseLayer.cpp  EditorPauseLayer.hpp  EditorUI.cpp  EditorUI.hpp
src/nodes/: ArrayNode.hpp  CreateObjectNode.hpp  DistributeObjectNode.hpp  MergeSplitColorNodes.hpp  MixColorNode.hpp  OutputNode.hpp  PrimitiveValueNodes.hpp  SelectedObjectsNode.hpp  TransformObjectNode.hpp  nodes.hpp
